<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.others.ChangePassword">
    <include layout="@layout/lay_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/txt_signup"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/New_Password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_confpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Please Enter Confirm Password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/check_showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="show Password" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_orange"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#FFF" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>