<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.others.Nav_profileActivity">

    <include layout="@layout/lay_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:elevation="10dp"
                        android:src="@drawable/edit" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/setprofileimage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ut"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/EditRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Do You Wish To Edit"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/EditServiceLocationCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="User Name"
                    android:padding="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText

                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="Email Address"
                    android:padding="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText

                    android:id="@+id/edit_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="Phone Number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText

                    android:id="@+id/edit_alternatephonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="Alternate Mobile Number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/edit_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/flatno"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText

                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="@string/city"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText

                    android:id="@+id/edit_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="@string/state"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/edit_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:enabled="false"
                        android:hint="@string/country"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorPrimary">

                    <EditText

                        android:id="@+id/edit_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:enabled="false"
                        android:hint="@string/pincode"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    android:hint="@string/landmark"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_profile_submit"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/btn_orange"
                android:backgroundTint="@color/colorPrimary"
                android:text="SUBMIT"
                android:textColor="@color/white"

                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>